[package]
name = "j2534_rust"
version = "1.0.0"
keywords = ["cars", "OBD", "passthru", "diagnostics"]
description = "Cross platform SAE J2534 bindings"
repository = "https://github.com/rnd-ash/J2534-Rust"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
readme="README.md"
edition = "2018"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
default-target = "i686-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags="1.2.1"
num = "0.2"
num-traits = "0.2"
num-derive = "0.3.3"
